# usd-ai

./: .gitignore  LICENSE.md  README.md  requirements.txt  usd-ai.code-workspace
usd-ai/: .gitignore  README.md  pyproject.toml
usd-ai/usd-mcp/: pytest.ini
usd-ai/usd-mcp/client/: README.md  __init__.py  client.py  requirements.txt
usd-ai/usd-mcp/client/tests/: conftest.py  test_client.py  test_integration.py
usd-ai/usd-mcp/plugin/: __init__.py
usd-ai/usd-mcp/server/: main.py  prim_inspector.py  server.py  stage_manager.py  usd_mcp_setup_guide.md
usd-ai/usd-mcp/server/tests/: test_mcp_inspector.bat  test_usd_mcp_server.py
usd-ai/usd-mcp/server/tools/: __init__.py  hierarchy.py  inspect.py
usd-ai/usd-mcp/server/utils/: validation.py
usd-ai/usd-mcp/test-dot/: main.py  pyproject.toml
usd-mcp/: README.md  requirements.txt
usd-mcp/client/: example.py  pyproject.toml
usd-mcp/client/tests/: __init__.py
usd-mcp/server/: __init__.py  __main__.py  main.py  prim_inspector.py  pyproject.toml  requirements.txt  server.py  stage_manager.py
usd-mcp/server/tests/: test_server.py  test_usd_mcp_server.py
usd-mcp/server/tools/: hierarchy.py  inspect.py  list_prims.py  load_stage.py
usd-mcp/server/utils/: __init__.py  formatting.py
usd-mcp/tests/: test_server.py  test_usd_mcp_server.py
usd-mcp/tutorialPlugin/: pluginfo.json  printer.py
